--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Historical horse population in Canada"
-output: github_document
+output:
+  html_document:
+    toc: TRUE
 ---
 
 ```{r setup, include=FALSE}
@@ -66,7 +68,7 @@ knitr::kable( max_horses, caption = 'Table 1')
 
 Below we zoom in and look at the province of Alberta:
 
-```{r plot province, fig.width=5, fig.height=4}
+```{r plot province, fig.width=5, fig.height=4, fig.cap = "Figure 2", fig.align = 'center'}
 province_plot <- horse_pop %>% 
   filter(GEO == "Alberta") %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
