--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -3,6 +3,7 @@ title: "Historical horse population in Canada"
 output:
   html_document:
     toc: TRUE
+bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
@@ -32,12 +33,12 @@ Horse population data were sourced from the [Government of Canada's Open Data we
 
 ## Methods
 
-The R programming language and the following R packages were used to perform the analysis: knitr and tidyverse. The code used to perform the analysis and create this report can be found here: https://github.com/ttimbers/equine_numbers_value_canada_rmd.
+The R programming language and the following R packages were used to perform the analysis: knitr and tidyverse [@tidy]. The code used to perform the analysis and create this report can be found here: https://github.com/ttimbers/equine_numbers_value_canada_rmd.
 
 
 ## Results
 
-```{r plot horses, fig.width=10, fig.height=3}
+```{r plot horses, fig.width=10, fig.height=3, fig.cap = "Figure 1", fig.align = 'center'}
 horse_plot <- ggplot(horse_pop, aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
@@ -63,7 +64,7 @@ max_horses <- horse_pop %>%
   group_by(Province) %>% 
   summarize(Maximum = max(Value),
             Minimum = min(Value))
-knitr::kable( max_horses, caption = 'Table 1')
+knitr::kable( max_horses, caption = 'Table 1: Range of number of horses for each provinces')
 ```
 
 Below we zoom in and look at the province of Alberta:
@@ -82,3 +83,8 @@ province_plot <- horse_pop %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 province_plot
 ```
+
+## References
+
+
+
