--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -4,6 +4,8 @@ output:
   html_document:
     toc: TRUE
 bibliography: references.bib
+params:
+  province: 'British Columbia'
 ---
 
 ```{r setup, include=FALSE}
@@ -67,11 +69,11 @@ max_horses <- horse_pop %>%
 knitr::kable( max_horses, caption = 'Table 1: Range of number of horses for each provinces')
 ```
 
-Below we zoom in and look at the province of Alberta:
+Below we zoom in and look at the province of `r params$province`:
 
 ```{r plot province, fig.width=5, fig.height=4, fig.cap = "Figure 2", fig.align = 'center'}
 province_plot <- horse_pop %>% 
-  filter(GEO == "Alberta") %>% 
+  filter(GEO == params$province) %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
